--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="subdetails">
+                    <div class="col">
+                        <img src="images/mist.png">
+                        <div>
+                            <p class="visibility">2500 m</p>
+                            <p>Visibility</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <script src="index.js"> </script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
